# nGene

./: Makefile  Makefile.am  Makefile.dist  Makefile.in  acconfig.h  acinclude.m4  acinclude.m4.in  aclocal.m4  authors  config.cache  config.h  config.h.in  config.status  configure  configure.in  configure.in.no_shlib  glut32.lib  libpng.lib  libtool  libtool.m4.in  ltconfig  missing  mkinstalldirs  nGene.dsp  nGene.dsw  nGene.ncb  nGene.opt  nGene.plg  ngene.kdevprj  ngene.lsm  rungunship.bat
data/: 6sides.lwo  Aaron.lwo  ArmedCruiser.lwo  Dread1Detail.tga  DreadHull.tga  HyperLogo.tga  Insignia.tga  RRoomTest.lwo  RomanRoom.tga  T_Rex_atlas_UV.lwo  TaronHead.lwo  Whitestar.lwo  WindowMap.tga  alpha_flyer.lwo  cosmopinball.tga  enterprise.lwo  flipper.lwo  littlespaceship.lwo  multitextured_dingus.lwo  ngene  pentathing.lwo  plunger.lwo  prism.lwo  starship_interior.lwo  suckerbeast.lwo  table.lwo  whackarat.txt  (+1 more)
ngene/: Camera.cpp  Makefile  Makefile.am  Makefile.in  camera.h  light.cpp  light.h  lwo2.cpp  lwo2.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  node.cpp  node.h  pngtex.cpp  pngtex.h  sceneGraph.cpp  sceneGraph.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  vector.cpp  vector.h  zlib.h
ngene/.deps/: Camera.P  light.p  lwo2.p  main.p  mesh.p  model.p  node.p  pngtex.p  sceneGraph.P  texture.p  texturemanager.P  vector.p
ngene/docs/: Makefile  Makefile.am  Makefile.in
ngene/docs/en/: Makefile  Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
(+1 files in other folders)
