####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = ngene
ngene_SOURCES = vector.cpp texturemanager.cpp texture.cpp sceneGraph.cpp pngtex.cpp node.cpp model.cpp mesh.cpp lwo2.cpp light.cpp Camera.cpp main.cpp 
ngene_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp Camera.cpp camera.h light.cpp light.h lwo2.cpp lwo2.h mesh.cpp mesh.h model.cpp model.h node.cpp node.h png.h pngconf.h pngtex.cpp pngtex.h sceneGraph.cpp sceneGraph.h texture.cpp texture.h texturemanager.cpp texturemanager.h vector.cpp vector.h zconf.h zlib.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = ngene

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
ngene_LDFLAGS = $(all_libraries) 
                                                                                
